raylib/raylib.odin


    @(link_name="IsMouseButtonUp")
    is_mouse_button_up :: proc(button : _c.int) -> bool ---;

    @(link_name="GetMouseX")
    get_mouse_x :: proc() -> _c.int ---;

    @(link_name="GetMouseY")
    get_mouse_y :: proc() -> _c.int ---;

    @(link_name="GetMousePosition")
    get_mouse_position :: proc() -> Vector2 ---;

    @(link_name="SetMousePosition")
    set_mouse_position :: proc(
        x : _c.int,
        y : _c.int
    ) ---;

    @(link_name="SetMouseOffset")
    set_mouse_offset :: proc(
        offset_x : _c.int,
        offset_y : _c.int
    ) ---;

    @(link_name="SetMouseScale")
    set_mouse_scale :: proc(
        scale_x : _c.float,
        scale_y : _c.float
    ) ---;

    @(link_name="GetMouseWheelMove")
    get_mouse_wheel_move :: proc() -> _c.int ---;

    @(link_name="GetTouchX")
    get_touch_x :: proc() -> _c.int ---;

    @(link_name="GetTouchY")
    get_touch_y :: proc() -> _c.int ---;

    @(link_name="GetTouchPosition")
    get_touch_position :: proc(index : _c.int) -> Vector2 ---;

    @(link_name="SetGesturesEnabled")
    set_gestures_enabled :: proc(gesture_flags : _c.uint) ---;

    @(link_name="IsGestureDetected")
    is_gesture_detected :: proc(gesture : _c.int) -> bool ---;

    @(link_name="GetGestureDetected")
    get_gesture_detected :: proc() -> _c.int ---;

    @(link_name="GetTouchPointsCount")
    get_touch_points_count :: proc() -> _c.int ---;

    @(link_name="GetGestureHoldDuration")
    get_gesture_hold_duration :: proc() -> _c.float ---;

    @(link_name="GetGestureDragVector")
    get_gesture_drag_vector :: proc() -> Vector2 ---;

    @(link_name="GetGestureDragAngle")
    get_gesture_drag_angle :: proc() -> _c.float ---;

    @(link_name="GetGesturePinchVector")
    get_gesture_pinch_vector :: proc() -> Vector2 ---;

    @(link_name="GetGesturePinchAngle")
    get_gesture_pinch_angle :: proc() -> _c.float ---;

    @(link_name="SetCameraMode")
    set_camera_mode :: proc(
        camera : Camera,
        mode : _c.int
    ) ---;

    @(link_name="UpdateCamera")
    update_camera :: proc(camera : ^Camera) ---;

    @(link_name="SetCameraPanControl")
    set_camera_pan_control :: proc(pan_key : _c.int) ---;

    @(link_name="SetCameraAltControl")
    set_camera_alt_control :: proc(alt_key : _c.int) ---;

    @(link_name="SetCameraSmoothZoomControl")
    set_camera_smooth_zoom_control :: proc(sz_key : _c.int) ---;

    @(link_name="SetCameraMoveControls")
    set_camera_move_controls :: proc(
        front_key : _c.int,
        back_key : _c.int,
        right_key : _c.int,
        left_key : _c.int,
        up_key : _c.int,
        down_key : _c.int
    ) ---;

    @(link_name="DrawPixel")
    draw_pixel :: proc(
        pos_x : _c.int,
        pos_y : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawPixelV")
    draw_pixel_v :: proc(
        position : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawLine")
    draw_line :: proc(
        start_pos_x : _c.int,
        start_pos_y : _c.int,
        end_pos_x : _c.int,
        end_pos_y : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawLineV")
    draw_line_v :: proc(
        start_pos : Vector2,
        end_pos : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawLineEx")
    draw_line_ex :: proc(
        start_pos : Vector2,
        end_pos : Vector2,
        thick : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawLineBezier")
    draw_line_bezier :: proc(
        start_pos : Vector2,
        end_pos : Vector2,
        thick : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCircle")
    draw_circle :: proc(
        center_x : _c.int,
        center_y : _c.int,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCircleSector")
    draw_circle_sector :: proc(
        center : Vector2,
        radius : _c.float,
        start_angle : _c.int,
        end_angle : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawCircleGradient")
    draw_circle_gradient :: proc(
        center_x : _c.int,
        center_y : _c.int,
        radius : _c.float,
        color1 : Color,
        color2 : Color
    ) ---;

    @(link_name="DrawCircleV")
    draw_circle_v :: proc(
        center : Vector2,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawCircleLines")
    draw_circle_lines :: proc(
        center_x : _c.int,
        center_y : _c.int,
        radius : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawRectangle")
    draw_rectangle :: proc(
        pos_x : _c.int,
        pos_y : _c.int,
        width : _c.int,
        height : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawRectangleV")
    draw_rectangle_v :: proc(
        position : Vector2,
        size : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawRectangleRec")
    draw_rectangle_rec :: proc(
        rec : Rectangle,
        color : Color
    ) ---;

    @(link_name="DrawRectanglePro")
    draw_rectangle_pro :: proc(
        rec : Rectangle,
        origin : Vector2,
        rotation : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawRectangleGradientV")
    draw_rectangle_gradient_v :: proc(
        pos_x : _c.int,
        pos_y : _c.int,
        width : _c.int,
        height : _c.int,
        color1 : Color,
        color2 : Color
    ) ---;

    @(link_name="DrawRectangleGradientH")
    draw_rectangle_gradient_h :: proc(
        pos_x : _c.int,
        pos_y : _c.int,
        width : _c.int,
        height : _c.int,
        color1 : Color,
        color2 : Color
    ) ---;

    @(link_name="DrawRectangleGradientEx")
    draw_rectangle_gradient_ex :: proc(
        rec : Rectangle,
        col1 : Color,
        col2 : Color,
        col3 : Color,
        col4 : Color
    ) ---;

    @(link_name="DrawRectangleLines")
    draw_rectangle_lines :: proc(
        pos_x : _c.int,
        pos_y : _c.int,
        width : _c.int,
        height : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawRectangleLinesEx")
    draw_rectangle_lines_ex :: proc(
        rec : Rectangle,
        line_thick : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawTriangle")
    draw_triangle :: proc(
        v1 : Vector2,
        v2 : Vector2,
        v3 : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawTriangleLines")
    draw_triangle_lines :: proc(
        v1 : Vector2,
        v2 : Vector2,
        v3 : Vector2,
        color : Color
    ) ---;

    @(link_name="DrawPoly")
    draw_poly :: proc(
        center : Vector2,
        sides : _c.int,
        radius : _c.float,
        rotation : _c.float,
        color : Color
    ) ---;

    @(link_name="DrawPolyEx")
    draw_poly_ex :: proc(
        points : ^Vector2,
        num_points : _c.int,
        color : Color
    ) ---;

    @(link_name="DrawPolyExLines")
    draw_poly_ex_lines :: proc(
        points : ^Vector2,
        num_points : _c.int,
        color : Color
    ) ---;

    @(link_name="SetShapesTexture")
    set_shapes_texture :: proc(
        texture : Texture2D,
        source : Rectangle
    ) ---;

    @(link_name="CheckCollisionRecs")
    check_collision_recs :: proc(
        rec1 : Rectangle,
        rec2 : Rectangle
    ) -> bool ---;

    @(link_name="CheckCollisionCircles")
    check_collision_circles :: proc(
        center1 : Vector2,
        radius1 : _c.float,
        center2 : Vector2,
        radius2 : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionCircleRec")
    check_collision_circle_rec :: proc(
        center : Vector2,
        radius : _c.float,
        rec : Rectangle
    ) -> bool ---;

    @(link_name="GetCollisionRec")
    get_collision_rec :: proc(
        rec1 : Rectangle,
        rec2 : Rectangle
    ) -> Rectangle ---;

    @(link_name="CheckCollisionPointRec")
    check_collision_point_rec :: proc(
        point : Vector2,
        rec : Rectangle
    ) -> bool ---;

    @(link_name="CheckCollisionPointCircle")
    check_collision_point_circle :: proc(
        point : Vector2,
        center : Vector2,
        radius : _c.float
    ) -> bool ---;

    @(link_name="CheckCollisionPointTriangle")
    check_collision_point_triangle :: proc(
        point : Vector2,
        p1 : Vector2,
        p2 : Vector2,
        p3 : Vector2
    ) -> bool ---;

    @(link_name="LoadImage")
    load_image :: proc(file_name : cstring) -> Image ---;

    @(link_name="LoadImageEx")
    load_image_ex :: proc(
        pixels : ^Color,
        width : _c.int,
        height : _c.int
    ) -> Image ---;

    @(link_name="LoadImagePro")
    load_image_pro :: proc(
        data : rawptr,
        width : _c.int,
        height : _c.int,
        format : _c.int
    ) -> Image ---;

    @(link_name="LoadImageRaw")
    load_image_raw :: proc(
        file_name : cstring,
        width : _c.int,
        height : _c.int,
        format : _c.int,
        header_size : _c.int
    ) -> Image ---;

    @(link_name="ExportImage")
    export_image :: proc(
        image : Image,
        file_name : cstring
    ) ---;

    @(link_name="ExportImageAsCode")
    export_image_as_code :: proc(
        image : Image,
        file_name : cstring
    ) ---;

    @(link_name="LoadTexture")
    load_texture :: proc(file_name : cstring) -> Texture2D ---;

    @(link_name="LoadTextureFromImage")
    load_texture_from_image :: proc(image : Image) -> Texture2D ---;

    @(link_name="LoadTextureCubemap")
    load_texture_cubemap :: proc(
        image : Image,
        layout_type : _c.int
    ) -> TextureCubemap ---;

    @(link_name="LoadRenderTexture")
    load_render_texture :: proc(
        width : _c.int,
        height : _c.int
    ) -> RenderTexture2D ---;

    @(link_name="UnloadImage")
    unload_image :: proc(image : Image) ---;

    @(link_name="UnloadTexture")
    unload_texture :: proc(texture : Texture2D) ---;

    @(link_name="UnloadRenderTexture")
    unload_render_texture :: proc(target : RenderTexture2D) ---;

    @(link_name="GetImageData")
    get_image_data :: proc(image : Image) -> ^Color ---;

    @(link_name="GetImageDataNormalized")
    get_image_data_normalized :: proc(image : Image) -> ^Vector4 ---;

    @(link_name="GetPixelDataSize")
    get_pixel_data_size :: proc(
        width : _c.int,
        height : _c.int,
        format : _c.int
    ) -> _c.int ---;

    @(link_name="GetTextureData")
    get_texture_data :: proc(texture : Texture2D) -> Image ---;

    @(link_name="GetScreenData")
    get_screen_data :: proc() -> Image ---;

    @(link_name="UpdateTexture")
    update_texture :: proc(
        texture : Texture2D,
        pixels : rawptr
    ) ---;

    @(link_name="ImageCopy")
    image_copy :: proc(image : Image) -> Image ---;

    @(link_name="ImageToPOT")
    image_to_pot :: proc(
        image : ^Image,
        fill_color : Color
    ) ---;

    @(link_name="ImageFormat")
    image_format :: proc(
        image : ^Image,
        new_format : _c.int
    ) ---;

    @(link_name="ImageAlphaMask")
    image_alpha_mask :: proc(
        image : ^Image,
        alpha_mask : Image
    ) ---;

    @(link_name="ImageAlphaClear")
    image_alpha_clear :: proc(
        image : ^Image,
        color : Color,
        threshold : _c.float
    ) ---;

    @(link_name="ImageAlphaCrop")
    image_alpha_crop :: proc(
        image : ^Image,
        threshold : _c.float
    ) ---;

    @(link_name="ImageAlphaPremultiply")
    image_alpha_premultiply :: proc(image : ^Image) ---;

    @(link_name="ImageCrop")
    image_crop :: proc(
        image : ^Image,
        crop : Rectangle
    ) ---;

    @(link_name="ImageResize")
    image_resize :: proc(
        image : ^Image,
        new_width : _c.int,
        new_height : _c.int
    ) ---;

    @(link_name="ImageResizeNN")
    image_resize_nn :: proc(
        image : ^Image,
        new_width : _c.int,
        new_height : _c.int
    ) ---;
